# geodata-nxt

./: README.md  address-standardization.py  cleanup.py  data-enrichment-pipeline.py  geodata-cli.py  geodata-core.py  geodata.py  project-structure.md  pyproject.toml  sample.csv  search-term-generator.py  setup.cfg
config/: default.yaml
old/: cli-module.py  compare_csv.py  compare_csv3.py  dedup_dask.py  dedup_pd.py  dental_clinic.txt  examples.md  excel_merger.py  geocoding.py  geofencing.py  geozoning.py  output_terms.txt  places.txt  places_search.py  terms.txt  uae-address-handler.py
src/geodata/: __init__.py
src/geodata/cli/: main.py
src/geodata/core/: address.py  enricher.py  geocoding.py
src/geodata/utils/: config.py  exceptions.py  logging.py
src/geodata/validators/: address.py  coordinates.py
