[metadata]
name = geodata
version = attr: geodata.__version__
author = Your Name
author_email = your.email@example.com
description = A comprehensive geospatial data enrichment toolkit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: GIS
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/yourusername/geodata/issues
    Documentation = https://github.com/yourusername/geodata#readme
    Source Code = https://github.com/yourusername/geodata

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    geodata = geodata.cli.main:main

[options.package_data]
geodata =
    py.typed
    *.pyi
    config/*.yaml
    config/*.yml

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .eggs,
    .tox,
    .venv,
    venv
per-file-ignores =
    __init__.py: F401
max-complexity = 10

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-dask.*]
ignore_missing_imports = True

[mypy-h3.*]
ignore_missing_imports = True

[mypy-shapely.*]
ignore_missing_imports = True

[mypy-pycountry.*]
ignore_missing_imports = True

[mypy-arabic_reshaper.*]
ignore_missing_imports = True

[mypy-bidi.*]
ignore_missing_imports = True

[mypy-thefuzz.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --doctest-modules
    --cov=geodata
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html
    -ra
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning

[coverage:run]
branch = True
source = geodata

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
ignore_errors = True
omit =
    tests/*
    setup.py

[coverage:html]
directory = coverage_html_report

[bdist_wheel]
universal = 0
